--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,648 @@
+
 /*=======================================
-    #Variables
+  #Variables
 =========================================*/
 
-/**
-  TABLE OF CONTENTS
+/*
+TABLE OF CONTENTS
 
-  COLORS
-  Brand colors............................These are the main brand colors.
-  Neutral colors..........................White and black, gray sacale, secondary colors.
-  Utility colors..........................Other colors to represent states: info, warning, sucess, etc.
+COLORS
+Brand colors............................These are the main brand colors.
+Neutral colors..........................White and black, gray sacale, secondary colors.
+Utility colors..........................Other colors to represent states: info, warning, sucess, etc.
 
-  TYPOGRAPHY
-  Font famillies..........................The fonts used in the design system.
-  Font weights............................Font weights
-  Sizes...................................Font sizing for body text, paragraphs, inputs
-  Heading sizes...........................Font sizing for page headings
+TYPOGRAPHY
+Font famillies..........................The fonts used in the design system.
+Font weights............................Font weights
+Sizes...................................Font sizing for body text, paragraphs, inputs
+Heading sizes...........................Font sizing for page headings
 
-  BREAKPOINTS
-  Breakpoints.............................Global responsive breakpoints definitions
+BREAKPOINTS
+Breakpoints.............................Global responsive breakpoints definitions
 */
-
+:root {
 /*=======================================
     COLORS
 =========================================*/
 
-/*=======================================
-    TYPOGRAPHY
-=========================================*/
-/* 
-  1. The Poppins font. This is the main font.
-  https://fonts.googleapis.com/css?family=Poppins
+/*=============================
+BRAND COLORS
+===============================*/
 
-  2. The Courier font. This is used for <pre> code.
-  https://fonts.googleapis.com/css?family=Poppins
+--primary-color: #2292b1;
+--start-gradient: #1b3385;
+--end-gradient: #25c5c9;
+--link-color: #abadb3;
+--hover-color: #2292b1;
+--border-margin: #383636;
+
+/*==============================
+NEUTRAL COLORS
+================================*/
+
+--white: #ffffff;
+--primary-bg: #0a0c11;
+--primary-text: #abadb3;
+--sub-menu-color: #222;
+--border-color: #323438;
+
+/*=======================================
+TYPOGRAPHY
+=========================================*/
+
+/*
+    1. The Poppins font. This is the main font.
+    https://fonts.googleapis.com/css?family=Poppins
+
+    2. The Courier font. This is used for <pre> code.
+    https://fonts.googleapis.com/css?family=Poppins
 */
 
+/*=========================
+Font weights
+==========================*/
+
+--thin: 100;
+--extra-light: 200;
+--light: 300;
+--normal: 400;
+--medium: 500;
+--semi-bold: 600;
+--bold: 700;
+--extra-bold: 800;
+--heavy: 900;
+
+/*=========================
+    Font famillies
+==========================*/
+
+--primary-font: "Poppins";
+--secondary-font: "Courier";
+
+/*=========================
+Sizes
+==========================*/
+--base-font: 20px;
+}
+
 /*=======================================
-    BREAKPOINTS
+    RESETS
 =========================================*/
+
+body {
+    box-sizing: border-box;
+    font-family: var(--primary-font);
+    font-size: var(--base-font);
+    color: var(--primary-text);
+    background-color: var(--primary-bg);
+    margin: 0;
+    padding: 0;
+}
+
+*,
+*::before,
+*::after {
+box-sizing: inherit;
+}
+
+/*=========================
+Heading Sizes
+==========================*/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: var(--medium);
+    font-family: var(--primary-font);
+    color: var(--white);
+    margin: 0;
+    }
+
+h1 {
+    font-size: 2.1em;
+    font-weight: var(--medium);
+    line-height: 1.72em;
+}
+
+h2 {
+    font-size: 1.5em;
+    line-height: 1.29em;
+    text-transform: capitalize;
+    margin-top: 14px;
+}
+
+h3 {
+    font-size: 1.6em;
+    font-weight: var(--bold);
+}
+
+h4 {
+    font-size: 1em;
+    font-weight: var(--bold);
+    line-height: 1em;
+}
+
+h5 {
+    font-size: 0.8em;
+    font-weight: var(--bold);
+    line-height: 1.6em;
+    color: var(--link-color);
+    text-transform: uppercase;
+}
+
+h6 {
+    font-size: 1.44em;
+    font-weight: var(--semi-bold);
+    line-height: 1.4em;
+}
+
+.lowlight {
+opacity: 0.5;
+}
+
+a {
+    font-weight: var(--normal);
+    text-decoration: none;
+    color: var(--primary-text);
+    font-size: 0.9em;
+    font-style: normal;
+    line-height: 2.4em;
+    text-transform: capitalize;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    padding: 0;
+}
+
+ul li {
+    position: relative;
+}
+
+a:hover,
+.logo h2:hover {
+    color: var(--hover-color);
+    cursor: pointer;
+}
+
+figure {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    width: 100%;
+}
+
+/* Button */
+
+.button-gradient {
+    margin: 25px 0;
+    border-radius: 30px;
+    background: linear-gradient(90deg, 
+        var(--start-gradient) 0%,
+        var(--end-gradient) 100%);
+    font-size: 0.9em;
+    font-weight: var(--bold);
+    color: var(--white);
+    padding: 16px 25px;
+    text-align: center;
+}
+
+.button-gradient:hover {
+    color: var(--primary-bg);
+    background: var(--white);
+}
+
+.cta {
+    margin-bottom: 70px;
+    text-align: center;
+}
+
+.blocks {
+    padding: 0 30px;
+}
+
+header {
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    flex: 3;
+}
+
+.mobile {
+    display: flex;
+    flex: 1;
+    justify-content: flex-end;
+}
+
+.mobile img {
+    width: 16px;
+}
+
+.desktop {
+    display: none;
+}
+
+.submenu {
+    display: none;
+}
+
+.social {
+    flex: 3;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.social ul {
+    gap: 20px;
+}
+
+/* Hero section
+MAIN */
+
+main {
+    display: flex;
+    padding: 42px 0;
+    margin: 0 auto;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+}
+
+.hero-title {
+    line-height: 38px;
+}
+
+.hero-title span {
+    opacity: 0.5;
+}
+
+.hero-subtitle {
+    line-height: 35px;
+}
+
+.hero-video video {
+    width: 100%;
+    max-width: 100%;
+    margin: 24px 0 0;
+}
+
+/* Services section */
+.our-services h5 {
+    padding: 20px 0 0;
+}
+
+.our-services h2 {
+    padding: 10px 0 0;
+}
+
+.statistics {
+    margin: 40px 0;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+}
+
+.statistics p {
+    margin-top: -2px;
+    margin-bottom: 25px;
+}
+
+/* what we do section */
+.what-we-do {
+    display: flex;
+    justify-content: center;;
+    flex-direction: column;
+}
+
+.featured-top-text {
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.featured-box {
+    border: 1px solid var(--border-margin);
+    margin-bottom: 30px;
+    padding: 35px;
+}
+
+.featured-box h4 {
+    margin-top: 20px;
+}
+
+.featured-box p {
+    font-size: 0.9em;
+    line-height: 32px;
+    margin: 20px 0 30px 0;
+}
+
+.featured-box a {
+    position: relative;
+}
+
+.featured-box a::after {
+    content: "";
+    border-bottom: 2px solid var(--hover-color);
+    position: absolute;
+    width: 85px;
+    left: 1px;
+    bottom: -7px;
+}
+
+/* Promotional Contact */
+.promotional-contact {
+    text-align: center;
+    padding: 74px 50px;
+}
+
+.promotional-contact h2 {
+    padding: 40px 0;
+}
+
+/* footer */
+.footer-title h4 {
+    margin: 20px 0;
+}
+
+.costumer-support ul,
+.quick-links ul {
+    display: flex;
+    flex-direction: column;
+}
+
+#email {
+    font-size: 0.7em;
+    padding: 13px;
+    background-color: transparent;
+    border-radius: 4px;
+    color: #ffffff;
+    border: 1px solid var(--border-color);
+    border-bottom-left-radius: 30px;
+    border-top-left-radius: 30px;
+    min-width: 220px;
+}
+
+.email-button {
+    font-size: 0.8em;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border: 0;
+    padding: 12px 16px 13.5px;
+    margin-left: -7px;
+}
+
+.quick-links {
+    margin-top: -35px;
+    margin-bottom: 40px;
+}
+
+.colored {
+    color: var(--hover-color);
+}
+
+.footer-blocks {
+    padding: 15px 30px;
+    font-size: 0.8em;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-blocks h5 {
+    text-transform: capitalize;
+}
+
+.footer-social ul {
+    gap: 20px;
+    margin-bottom: 0;
+}
+
+.float {
+    position: fixed;
+    text-align: center;
+    vertical-align: middle;
+    color: #fff;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: linear-gradient(90deg,
+        var(--start-gradient) 0%,
+        var(--end-gradient) 100%);
+    bottom: 0;
+    right: 0;
+    z-index: 9999;
+    margin: 20px;
+    padding: 0px;
+}
+
+.float:hover {
+    background: var(--white);
+    color: var(--background);
+    transition: all 0.8s ease;
+}
+
+/* **************************************************
+TABLET AND DESKTOP BREAKPOINTS
+***************************************************** */
+@media all and (min-width: 479px) and (max-width: 1280px) {}
+
+@media all and (min-width: 479px) {
+
+    .mobile{
+        display: none;
+    }
+    
+    .blocks {
+        padding: 0 88px;
+    }
+
+    .submenu li:hover {
+        padding-left: 30px;
+    }
+
+    .social {
+        flex: 1;
+    }
+
+    .hero {
+        padding: 0 85px;
+    }
+
+    .logo {
+        flex: 1;
+    }
+
+    .logo h2 {
+        font-size: 32px;
+        font-weight: 700px;
+    }
+
+    .desktop img {
+        width: 10px;
+    }
+
+    .desktop a {
+        font-size: 13px;
+    }
+
+    .desktop {
+        display: flex;
+        flex: 3;
+        justify-content: center;
+        font-weight: 100;
+    }
+
+    .desktop>ul {
+        gap: 35px;
+    }
+
+    .desktop ul li {
+        position: relative;
+    }
+    
+    .submenu {
+        width: 150px;
+        background-color: var(--sub-menu-color);
+        z-index: 99;
+    }
+    
+    .submenu li {
+        min-width: 100%;
+        padding-left: 20px;
+        border: 1px solid var(--border-color);
+    }
+    
+    .desktop ul li:nth-child(2):hover .submenu {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .social {
+        flex: 1;
+    }
+
+    main {
+        max-width: 760px;
+    }
+
+    .services {
+        display: flex;
+        margin: 140px 0;
+        align-items: center;
+    }
+
+    .front-image {
+        width: 100%;
+    }
+
+    .our-services {
+        padding-left: 50px;
+    }
+    
+    .statistics {
+        flex-direction: row;
+        gap: 150px;
+        padding: 0 80px;
+        margin-bottom: 130px;
+    }
+
+    .featured-images {
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+
+    }
+
+    .featured-box:hover figure img {
+        transform: scale(1.1);
+        transition: all 0.5s ease-in-out;
+        opacity: 0.5;
+    }
+
+    figure {
+        overflow: hidden;
+    }
+
+    .featured-box {
+        padding: 20px 30px;
+    }
+
+    .promotional-contact {
+        margin: 150px 0;
+    }
+
+    #email {
+        font-size: 0.7em;
+        padding: 13px;
+        background-color: transparent;
+        border-radius: 4px;
+        color: #ffffff;
+        border: 1px solid var(--border-color);
+        border-bottom-left-radius: 30px;
+        border-top-left-radius: 30px;
+        min-width: 250px;
+    }
+
+    .email-button {
+        font-size: 0.8em;
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px;
+        border-top-right-radius: 30px;
+        border-bottom-right-radius: 30px;
+        border: 0;
+        padding: 13.2px 16px 13.5px;
+        margin-left: -7px;
+    }
+    
+    footer {
+        padding: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        margin-bottom: 50px;
+    }
+
+    .footer-title,
+    .costumer-support {
+        margin-top: -30px;
+    }
+    
+    hr {
+        position: relative;
+        border: 1px solid rgb(78, 75, 75);
+    }
+    
+    .footer-social {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: -50px;
+        padding-right: 50px;
+    }
+
+    .social .circle{
+        margin-top: 6px;
+    }
+
+    .circle {
+        width: 42px;
+        height: 42px;
+        border-radius: 50%;
+        position: absolute;
+        left: -11px;
+        top: -8px;
+    }
+
+    .circle:hover {
+        background: #6a6464;
+        opacity: 0.5;
+    }
+}
